# bevy-3d-prototype

./: Cargo.toml
assets/: player.gltf
src/: camera.rs  camera_controller.rs  main.rs  player.rs  schedule.rs  state.rs  world.rs
src/player/: animation.rs  controller.rs  mod.rs
