[package]
name = "bevy-3d-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24"
bevy_rapier3d = "0.25"
bevy-scene-hook = "10.0.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
